--- a/style/style.css
+++ b/style/style.css
@@ -1,14 +1,63 @@
 .products_list {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-    margin-right: 10px;
-    margin-left: 10px;
-  }
-  .products_list > div {
-    width: 29%;
-    text-align: center;
-    padding: 20px 0;
-  }
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+.products_list>div {
+  width: 29%;
+  text-align: center;
+ margin: 20px;
+ height: auto;  
+text-align: center;  
+}
+
+.products_list > div >img {
+  object-fit: contain;  
+  width: 50%; 
+height: 250px;
+}
+
+.ad_banner {
+  position: relative;
+  top: 0;
+  left: 0;
+}
+
+.kid {
+  position: relative;
+  top: 0;
+  left: 0;
+
+}
+
+.ad {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.off_text {
+  position: absolute;
+  top: 40%;
+  left: 45%;
+  text-align: center;
+}
+
+.products_word {
+  align-self: center;
+  align-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.see_more {
+  text-align: center;
+  display: block;
+  font-size: xx-large;
+  margin: 128px;
+}
