--- a/style/style.css
+++ b/style/style.css
@@ -11,15 +11,15 @@
 .products_list>div {
   width: 29%;
   text-align: center;
- margin: 20px;
- height: auto;  
-text-align: center;  
+  margin: 20px;
+  height: auto;
+  text-align: center;
 }
 
-.products_list > div >img {
-  object-fit: contain;  
-  width: 50%; 
-height: 250px;
+.products_list>div>img {
+  object-fit: contain;
+  width: 50%;
+  height: 250px;
 }
 
 .ad_banner {
@@ -32,7 +32,6 @@ height: 250px;
   position: relative;
   top: 0;
   left: 0;
-
 }
 
 .ad {
@@ -42,6 +41,7 @@ height: 250px;
 }
 
 .off_text {
+  color: white;
   position: absolute;
   top: 40%;
   left: 45%;
@@ -49,6 +49,7 @@ height: 250px;
 }
 
 .products_word {
+  margin: 25px;
   align-self: center;
   align-content: center;
   align-items: center;
