--- a/style/allProducts.css
+++ b/style/allProducts.css
@@ -1,16 +1,26 @@
 .products_list {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
+background-color: #F9F9F9F9;
+  margin-top: 28px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin-right: 10px;
+  margin-left: 10px;
+}
 
-  }
-  .products_list > div {
-    width: 33%;
-    text-align: center;
-  }
+.products_list>div {
+  width: 29%;
+  text-align: center;
+  margin: 10px;
+  height: auto;
+  text-align: center;
+}
 
-  .products_list > img {
-    width: 30%;
-    height: 3%;
-  }
+.products_list>div>img {
+  border-radius: 10%;
+  object-fit: cover;
+  width: 90%;
+  height: 250px;
+}
